# supermarket-service

./: Dockerfile  Dockerfile.prod  Makefile  alembic.ini  compose.prod.yaml  compose.yaml  mypy.ini  pyproject.toml  sonar-project.properties
.github/workflows/: sonar.yaml  submodule.yaml
.sonarlint/: connectedMode.json
migrations/: __init__.py  env.py  locations.sql  supermarket.sql
migrations/versions/: 18b6d3ec7226_populate_supermarkets.py  8dc3b8b3ecff_initial_schema.py  a7f28e6440d6_add_location_data.py  db67d4159037_populate_prices.py
patches/: strawberry-sqlalchemy.patch
scripts/: gen_blurhash.py  location.py  portugal.osm.pbf  prices.py  products.json
src/: crud.py  filters.py  graphql.py  main.py  models.py
src/config/: redis.py  session.py  settings.py
src/crud/: base.py  location.py  prices.py  supermarket.py
